--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -566,7 +566,439 @@
    "id": "53e5f4e0-51be-4929-a1a1-f52215d66211",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "ChatPromptTemplate\n",
+    "------------------\n",
+    "|->Langchain utility \n",
+    "|->Build structured prompts\n",
+    "        ===================\n",
+    "               |->Chat bot , QA \n",
+    "\n",
+    "\n",
+    "End_User: Query ---------->--- | Application |  <== Human message - userQuery (or) userinput\n",
+    "                                 ..\n",
+    "            =======<==========                  <== AI message \n",
+    "                Response                                   |<== System message - rules/behavior  \n",
+    "\n",
+    "\n",
+    "1. Role/Context\n",
+    "2. Task \n",
+    "3. Format - how should the output/result look ?\n",
+    "     (ex: provide the answer as a bullet point\n",
+    "           write it in json format \n",
+    "           keep it under 100 words..)\n",
+    "\n",
+    "4. Constraints - What rules to follow?\n",
+    "      (ex: Don't use technical jargon\n",
+    "           use python 3.10+ features)\n",
+    "\n",
+    "5. Example - optional \n",
+    "           \n",
+    "List of tuple \n",
+    "--------------\n",
+    "[(\"system\",define role),(\"human\",userQuery)] \n",
+    "\n",
+    "Example:\n",
+    "[(\"system\",\"You are a helpful AI assistant.\"),\n",
+    " (\"human\",\"Explain about {topic} in simple terms\")]\n",
+    "|\n",
+    "|\n",
+    "Langchain Converts into \n",
+    "System: \n",
+    "Human: \n",
+    "\n",
+    "UserInput is:  topic=\"transformers\"\n",
+    "|\n",
+    "|\n",
+    "Langchain Converts to\n",
+    "|\n",
+    "System: You are a helpful AI assistant.\n",
+    "Human:  Explain about transformers in simple terms\n",
+    "---------------------------------------------------\n",
+    " |\n",
+    " |_______ sends to chat model\n",
+    "\n",
+    "system , You are a helpful AI bot. -> SystemMessage(content=\"You are a helpful AI bot.\"....)\n",
+    "human, Hello, how are you doing? -> HumanMessage(content=\"Hello, how are you doing?\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1f0c910d-422e-4d5b-9290-333d37c998c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "da427f1d-9121-4e77-b2ed-22ec00cceae5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#help(ChatPromptTemplate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bc97d6ee-d38a-4927-a5ef-64acef6620a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=[], input_types={}, partial_variables={}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], input_types={}, partial_variables={}, template='you are helpful assistant'), additional_kwargs={}), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], input_types={}, partial_variables={}, template='I likes to read python books'), additional_kwargs={})])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        ('system','you are helpful assistant'),\n",
+    "        ('human','I likes to read python books')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7de84653-75d6-428a-abbc-36c04d54a504",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatPromptTemplate(input_variables=['mybook'], input_types={}, partial_variables={}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], input_types={}, partial_variables={}, template='you are helpful assistant'), additional_kwargs={}), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['mybook'], input_types={}, partial_variables={}, template='I likes to read {mybook} books'), additional_kwargs={})])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        ('system','you are helpful assistant'),\n",
+    "        ('human','I likes to read {mybook} books')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "844ecd52-2a62-4d86-a4a1-9803dcc2c4ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='you are helpful assistant', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='I likes to read ruby books', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        ('system','you are helpful assistant'),\n",
+    "        ('human','I likes to read {mybook} books')\n",
+    "    ]\n",
+    ")\n",
+    "prompt.format_messages(mybook=\"ruby\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7814a2cc-3cf0-4fc8-87d9-903d7520d640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj.invoke(\"what is langchain?\") --->HumanMessage(content=\"what is langchain?\",.....)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "1792a0c4-f9e4-4d10-bb51-025e0177b458",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='you are helpful assistant', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='I likes to read ruby books', additional_kwargs={}, response_metadata={}),\n",
+       " AIMessage(content='Sure', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        ('system','you are helpful assistant'),\n",
+    "        ('human','I likes to read {mybook} books'),\n",
+    "        ('ai','Sure')\n",
+    "    ]\n",
+    ")\n",
+    "prompt.format_messages(mybook=\"ruby\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5092d5a2-e08e-4d5b-a1f6-cfa4bb9c0c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Local\\Temp\\ipykernel_29792\\275367955.py:2: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  my_llm_obj = Ollama(model=\"gemma2:2b\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_community.llms import Ollama\n",
+    "my_llm_obj = Ollama(model=\"gemma2:2b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7153b19c-ed2f-4bd9-a073-a8392efdee24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"Your AI assistant\"),\n",
+    "    (\"user\",\"Question:{question}\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "84809a11-cb0b-42b3-8a87-873504aa8ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_chain = chat_prompt|my_llm_obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "197c4e60-fbdd-409b-b51b-9b12225d279e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"GenAI, or **Generative Artificial Intelligence**, is a type of artificial intelligence that focuses on creating new content.  \\n\\nHere's a breakdown:\\n\\n**What it does:**\\n\\n* **Creates original work**: This can range from text and images to music, code, videos, and even 3D models.\\n* **Learns patterns and relationships**: GenAI uses vast datasets of information to understand how things are connected and generate new content based on learned patterns.  \\n* **Applies creative techniques**: It can emulate human creativity by producing diverse, original output in various styles and formats.\\n\\n**How it works:**\\n\\nGenAI usually relies on powerful algorithms that process massive amounts of data to train models like:\\n\\n* **Language Models**: GPT-3, Bard, etc. excel at understanding and generating human-like text.\\n* **Image Models**: DALL-E 2, Midjourney, etc. can create realistic or imaginative images from text prompts. \\n\\n**Examples:**\\n\\n* **Writing Assistant**:  Tools like Jasper or Copy.ai help users generate content quickly and efficiently for writing blog posts, social media updates, etc.\\n* **Image Generation**: Artists are using AI tools to design unique artwork, while marketing teams use them to create custom visuals for campaigns.\\n* **Code Generation**: Tools like GitHub Copilot can suggest code snippets based on user prompts, accelerating the development process. \\n\\n**Overall:** GenAI is revolutionizing content creation and opening up new possibilities in various industries!\\n\\n\\nLet me know if you have any more questions about GenAI!  😊 \\n\""
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_chain.invoke({'question':'what is genAI?'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6e404909-09e7-48f4-9c78-960deedc5292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"Say don't know\"),\n",
+    "    (\"user\",\"Question:{question}\")\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "acec117a-5fb7-4f8f-a7f2-e1b5b3747d7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_chain = chat_prompt|my_llm_obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1105b21a-be81-40fd-8b19-9cada9560e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Say: Don't know \\n\""
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_chain.invoke({'question':'what is genAI?'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b5da6c63-1548-4feb-a922-8e51aae3551c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"Your AI assistant\"),\n",
+    "    (\"user\",\"Question:{question}\")\n",
+    "])\n",
+    "my_chain = chat_prompt|llm_obj # groq object "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cb71006e-23d5-4725-a98a-431c773d3da0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='GenAI, short for Generalized Artificial Intelligence, refers to a hypothetical AI system that possesses the ability to understand, learn, reason, and apply its knowledge across a wide range of tasks, similar to human intelligence.\\n\\nGenAI is often considered a type of artificial general intelligence (AGI), which is a more specific term that refers to an AI system that has the ability to understand, learn, and apply its knowledge to solve any problem, in the same way that a human would.\\n\\nThe key characteristics of GenAI include:\\n\\n1. **General knowledge**: Ability to understand and apply knowledge across various domains and tasks.\\n2. **Reasoning and problem-solving**: Ability to reason, solve problems, and make decisions, like a human would.\\n3. **Learning and adaptation**: Ability to learn from experience, adapt to new situations, and improve over time.\\n4. **Self-awareness and consciousness**: Some researchers believe that GenAI may also possess self-awareness and consciousness, although this is still a topic of debate.\\n\\nGenAI is considered a significant milestone in the development of artificial intelligence, as it would enable AI systems to:\\n\\n1. **Assist humans**: GenAI could assist humans in various tasks, such as healthcare, finance, education, and more.\\n2. **Create new technologies**: GenAI could generate new ideas, products, and services that would transform industries and society.\\n3. **Improve decision-making**: GenAI could provide humans with more accurate and informed decision-making capabilities.\\n\\nHowever, the development of GenAI also raises significant concerns, such as:\\n\\n1. **Job displacement**: GenAI could automate many jobs, potentially leading to significant job displacement.\\n2. **Bias and ethics**: GenAI could perpetuate biases and make decisions that are unfair or unethical.\\n3. **Security risks**: GenAI could pose significant security risks if not designed and developed with robust safety protocols.\\n\\nWhile researchers have made significant progress in developing narrow AI systems, the development of GenAI remains a subject of ongoing research and debate.', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 407, 'prompt_tokens': 45, 'total_tokens': 452, 'completion_time': 0.536295079, 'prompt_time': 0.00215373, 'queue_time': 0.050621596, 'total_time': 0.538448809}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_1151d4f23c', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--87056912-0d30-42b6-a48b-72dffe6d3059-0', usage_metadata={'input_tokens': 45, 'output_tokens': 407, 'total_tokens': 452})"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_chain.invoke({'question':'what is genAI?'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3530b3ce-db2b-4e92-9efa-b78b9971d288",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\",\"Your sql expert\"),\n",
+    "    (\"user\",\"Get list of users from {question} dept\"),\n",
+    "    (\"ai\",\"select *from users\")\n",
+    "])\n",
+    "my_chain = chat_prompt|llm_obj # groq object "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "418c8cdb-15da-41e6-841b-1479e6c8444e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\" \\nwhere department = 'Sales'\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 8, 'prompt_tokens': 48, 'total_tokens': 56, 'completion_time': 0.02777622, 'prompt_time': 0.002276861, 'queue_time': 0.050675056, 'total_time': 0.030053081}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_f757f4b0bf', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--7b291980-26c0-4d24-8e5d-af039b4ea891-0', usage_metadata={'input_tokens': 48, 'output_tokens': 8, 'total_tokens': 56})"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_chain.invoke({'question':'sales'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b897f592-b42b-4b09-bc59-0b3dc406d665",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "45811b53-03df-4057-972d-18b86b10844d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text summarization\n",
+    "text = '''\n",
+    "Aritfical Intelligence(AI) is transforming industries..\n",
+    "AI models are used in hearthcare,finance,education,enterprise indus and also supports autonomous system'''\n",
+    "\n",
+    "prompt = f'Summarize the following text in 3 bullet points:\\n{text}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "119f2cb9-93ca-4985-8acf-e11264f5e803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a 3-bullet point summary of the text:\n",
+      "\n",
+      "* **Artificial Intelligence (AI) is impacting diverse industries.** AI models are being utilized in fields such as healthcare, finance, education, enterprise operations, and even support for autonomous systems.\n",
+      "* **AI's influence extends across various sectors.**  The text highlights the widespread application of AI across different industries, showcasing its versatility and reach. \n",
+      "* **Key applications include healthcare, finance, and education.** The text specifically mentions how AI is used in these areas as examples of the impact of AI on daily life. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_llm_obj.invoke(prompt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cfa2682-5818-4e60-815e-f59ca5d2081e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = f'''Summarize the following text in 3 bullet points:\\n{text}\n",
+    "           1. data1\n",
+    "           2. data2\n",
+    "           3. data3'''"
+   ]
   }
  ],
  "metadata": {
