--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -999,6 +999,338 @@
     "           2. data2\n",
     "           3. data3'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "426b996e-e2e4-4f07-8f2d-0315ecbfcad3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0334a28c-1366-4838-b719-7ea0b2227fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summarization\n",
+    "# Grammar and Text Correction\n",
+    "# Text to structured \n",
+    "# Code generation\n",
+    "# Content generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2bab4d6d-be4b-47f9-8761-426530d14be8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Here\\'s the corrected text:\\n\\n\"AI is changing the world in many ways. It helps people to work faster.\"\\n\\nHere\\'s a breakdown of the corrections:\\n\\n- \"AI are\" should be \"AI is\" (subject-verb agreement: AI is a singular subject, so it should use a singular verb)\\n- \"chaining\" should be \"changing\" (correct spelling)\\n- \"the world in many way\" should be \"the world in many ways\" (plural form of \"way\")\\n- \"It help\" should be \"It helps\" (subject-verb agreement: a singular subject \"it\" should use a singular verb \"helps\")\\n- \"peoples\" should be \"people\" (correct spelling)' additional_kwargs={} response_metadata={'token_usage': {'completion_tokens': 147, 'prompt_tokens': 60, 'total_tokens': 207, 'completion_time': 0.209621642, 'prompt_time': 0.00295258, 'queue_time': 0.06125126, 'total_time': 0.212574222}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_f757f4b0bf', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--3057fa92-f402-4bca-8451-a2e7c50791dc-0' usage_metadata={'input_tokens': 60, 'output_tokens': 147, 'total_tokens': 207}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grammar and Text Correction\n",
+    "prompt = '''\n",
+    "Correct grammar and spelling mistakes in this text:\n",
+    "\"AI are chaining the world in many way.It help peoples to work faster\"\n",
+    "'''\n",
+    "response = llm_obj.invoke(prompt)\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "25c3ba4e-7f92-445d-bffc-c57ea2f6c793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's the corrected text:\n",
+      "\n",
+      "\"AI is changing the world in many ways. It helps people to work faster.\"\n",
+      "\n",
+      "Here's a breakdown of the corrections:\n",
+      "\n",
+      "- \"AI are\" should be \"AI is\" (subject-verb agreement: AI is a singular subject, so it should use a singular verb)\n",
+      "- \"chaining\" should be \"changing\" (correct spelling)\n",
+      "- \"the world in many way\" should be \"the world in many ways\" (plural form of \"way\")\n",
+      "- \"It help\" should be \"It helps\" (subject-verb agreement: a singular subject \"it\" should use a singular verb \"helps\")\n",
+      "- \"peoples\" should be \"people\" (correct spelling)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "262056ff-8e42-4921-9d6b-b2f14606a39e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here are 5 bullet points summarizing the text:\n",
+      "\n",
+      "• LangChain is an open-source framework for developing applications powered by large language models (LLMs).\n",
+      "• The framework simplifies the entire lifecycle of LLM application development, including development, productionization, and deployment.\n",
+      "• During development, LangChain provides open-source components and third-party integrations to build and customize applications.\n",
+      "• LangSmith is used for productionization, allowing developers to inspect, monitor, and evaluate applications for continuous optimization and deployment.\n",
+      "• LangChain's LangGraph Platform enables the deployment of LangGraph applications as production-ready APIs and Assistants.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Summarization\n",
+    "# Task \n",
+    "# read my_docs.txt file - use python file handling - open a inputfile - read a content - pass this input to prompt\n",
+    "# define prompt - Summarize 5 bullet points \n",
+    "\n",
+    "s  = open('my_docs.txt').read()\n",
+    "\n",
+    "prompt = f'Summarize the following text in 5 bullet points:\\n\\n{s}'\n",
+    "\n",
+    "response = llm_obj.invoke(prompt)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "fbf7d703-9701-4e6e-80f5-147ae0bf2cfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I don't see any given text. Please provide the text, and I will extract the information and present it in JSON format.\n",
+      "\n",
+      "However, if you provide the text \"Ctpl indus was founded by Mr.Ram in year 1982 in Bangalore\", here's the extracted information in JSON format:\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "    \"Company Name\": \"Ctpl indus\",\n",
+      "    \"Founder\": \"Mr. Ram\",\n",
+      "    \"Year Founded\": 1982,\n",
+      "    \"Location\": \"Bangalore\"\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Text to structured \n",
+    "text = \"Ctpl indus was founded by Mr.Ram in year 1982 in Bangalore\"\n",
+    "\n",
+    "prompt = f'From the given text:{text} extract information in json'\n",
+    "\n",
+    "response = llm_obj.invoke(prompt)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f0a09686-a0d8-44cd-b361-40fb3be618f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Calculating Factorial of a Number in Python**\n",
+      "====================================================\n",
+      "\n",
+      "Here's a simple Python function that calculates the factorial of a given number:\n",
+      "```python\n",
+      "def calculate_factorial(n):\n",
+      "    \"\"\"\n",
+      "    Calculate the factorial of a given number.\n",
+      "\n",
+      "    Args:\n",
+      "        n (int): The number for which the factorial is to be calculated.\n",
+      "\n",
+      "    Returns:\n",
+      "        int: The factorial of the given number.\n",
+      "\n",
+      "    Raises:\n",
+      "        ValueError: If the input number is negative.\n",
+      "    \"\"\"\n",
+      "    if not isinstance(n, int):\n",
+      "        raise TypeError(\"Input must be an integer.\")\n",
+      "    if n < 0:\n",
+      "        raise ValueError(\"Input number must be non-negative.\")\n",
+      "    elif n == 0 or n == 1:\n",
+      "        return 1\n",
+      "    else:\n",
+      "        return n * calculate_factorial(n-1)\n",
+      "```\n",
+      "**Example Use Cases**\n",
+      "--------------------\n",
+      "\n",
+      "```python\n",
+      "# Calculate the factorial of 5\n",
+      "print(calculate_factorial(5))  # Output: 120\n",
+      "\n",
+      "# Calculate the factorial of 0\n",
+      "print(calculate_factorial(0))  # Output: 1\n",
+      "\n",
+      "# Calculate the factorial of a negative number (raises ValueError)\n",
+      "try:\n",
+      "    print(calculate_factorial(-5))\n",
+      "except ValueError as e:\n",
+      "    print(e)  # Output: Input number must be non-negative.\n",
+      "\n",
+      "# Calculate the factorial of a non-integer (raises TypeError)\n",
+      "try:\n",
+      "    print(calculate_factorial(3.5))\n",
+      "except TypeError as e:\n",
+      "    print(e)  # Output: Input must be an integer.\n",
+      "```\n",
+      "**Alternative Recursive Implementation**\n",
+      "--------------------------------------\n",
+      "\n",
+      "For a more efficient recursive implementation, you can use memoization to store the factorial of previously calculated numbers:\n",
+      "```python\n",
+      "factorial_cache = {0: 1, 1: 1}\n",
+      "\n",
+      "def calculate_factorial(n):\n",
+      "    if n not in factorial_cache:\n",
+      "        factorial_cache[n] = n * calculate_factorial(n-1)\n",
+      "    return factorial_cache[n]\n",
+      "```\n",
+      "This approach avoids redundant calculations and improves performance for large inputs. However, it uses more memory to store the cache.\n",
+      "\n",
+      "**Iterative Implementation**\n",
+      "---------------------------\n",
+      "\n",
+      "For an iterative approach, you can use a simple loop to calculate the factorial:\n",
+      "```python\n",
+      "def calculate_factorial(n):\n",
+      "    if not isinstance(n, int):\n",
+      "        raise TypeError(\"Input must be an integer.\")\n",
+      "    if n < 0:\n",
+      "        raise ValueError(\"Input number must be non-negative.\")\n",
+      "    result = 1\n",
+      "    for i in range(1, n+1):\n",
+      "        result *= i\n",
+      "    return result\n",
+      "```\n",
+      "This implementation is more efficient than the recursive approach and does not use any extra memory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Code generation\n",
+    "\n",
+    "input_ = 'Write a python function to calculate factorial of a number'\n",
+    "response = llm_obj.invoke(input_)\n",
+    "print(response.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c1ca79a7-782d-496b-b8d0-f949de928f87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a rewritten version of the text:\n",
+      "\n",
+      "\"Our product is affordable and useful for every customer, whether in a formal or professional setting.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Text -->Rewrite \n",
+    "text = \"Our product is afforable and useful for every customers\"\n",
+    "\n",
+    "prompt = f\"Rewrite the give text:{text} in formal and profession:\"\n",
+    "\n",
+    "print(llm_obj.invoke(prompt).content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "3113a6df-f3a3-404e-930e-a0a140147881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's a sample email for a professional appointment notification:\n",
+      "\n",
+      "Subject: Job Offer and Appointment Notification\n",
+      "\n",
+      "Dear [Candidate Name],\n",
+      "\n",
+      "We are pleased to inform you that after a thorough evaluation of your application and interview process, we are delighted to offer you the position of [Job Title] at [Company Name]. Your exceptional skills, experience, and passion for the field made you stand out among other candidates, and we believe you would be a valuable addition to our team.\n",
+      "\n",
+      "Below are the details of your appointment:\n",
+      "\n",
+      "- Job Title: [Job Title]\n",
+      "- Department: [Department Name]\n",
+      "- Reporting Manager: [Manager's Name]\n",
+      "- Start Date: [Start Date]\n",
+      "- Salary: [Salary Amount]\n",
+      "- Benefits: [List of benefits, if applicable]\n",
+      "\n",
+      "We have attached a copy of the employment contract, which outlines the terms and conditions of your appointment. Please review it carefully and do not hesitate to reach out to us if you have any questions or concerns.\n",
+      "\n",
+      "To confirm your acceptance, please sign and return a copy of the contract to us by [Deadline for response]. We also require a start date confirmation by [Deadline for response].\n",
+      "\n",
+      "We look forward to welcoming you to our team and working together to achieve great things. If you have any questions or need further information, please do not hesitate to contact us.\n",
+      "\n",
+      "Congratulations once again on your appointment, and we look forward to hearing back from you soon.\n",
+      "\n",
+      "Best regards,\n",
+      "\n",
+      "[Your Name]\n",
+      "[Your Title]\n",
+      "[Company Name]\n",
+      "[Contact Information]\n",
+      "\n",
+      "Attachments: \n",
+      "- Employment Contract\n",
+      "- Job Description\n",
+      "- Company Policies and Procedures (if applicable)\n",
+      "\n",
+      "Please note that you should customize this email to fit your company's specific needs and requirements.\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_var = 'Give me professional appointment email for a candidate who was selected'\n",
+    "print(llm_obj.invoke(input_var).content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f2b36a-9528-4756-8233-198c1dd0dbbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
