--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -1330,7 +1330,244 @@
    "id": "73f2b36a-9528-4756-8233-198c1dd0dbbb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Internal \n",
+    "|->prompt<--->llm\n",
+    "\n",
+    "input prompt ->tokenizaion \n",
+    "                       |->tokenID --->embedding vector(768/1024/4096)\n",
+    "\n",
+    "prompt: \"Explain how to write C program\" \n",
+    "\n",
+    "Tokenization --> ['Explain','how','to','write','C','program']\n",
+    "                     |        |     |    |      |    |\n",
+    "\"Explain\" -->[0.89,0.56,-0.76...]\n",
+    "\n",
+    "Transformer - Positional encoding\n",
+    "------------\n",
+    " |->self-attention\n",
+    "    |\n",
+    "   attention score\n",
+    "Feed-Forward Network\n",
+    "\n",
+    "Prompt-Text\n",
+    "|\n",
+    "Prompt-Token\n",
+    "|\n",
+    "embedding+position\n",
+    "|\n",
+    "TF-1\n",
+    "|\n",
+    "TF-2\n",
+    "..\n",
+    "|\n",
+    "softmax - probability of next token\n",
+    "|->select next token\n",
+    "|\n",
+    "Append token -->repeat\n",
+    "\n",
+    "Prompt rule                     Internal\n",
+    "You are an expert   ------>  Activates expert-style pattern\n",
+    "Step by step       ---------> Raises probability of chain-like structure\n",
+    "...\n",
+    "use json --------------> strong - json format\n",
+    "\n",
+    "Do not explain ------------ suppresses explianation tokens\n",
+    "|\n",
+    "Repetition ----------------- Increases attention weight\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1edfdeef-40d1-49ab-901b-f225599787f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Prompting Techniques\n",
+    "\n",
+    "shot -- example\n",
+    "1. Zero-shot (no example)\n",
+    "==========================\n",
+    "prompt: \"Translate this to french: I like to write program\"\n",
+    "|\n",
+    "response : j\"adore....\"\n",
+    "\n",
+    "2.one-shot prompt \n",
+    "prompt: \"\"\"Translate this to french:\n",
+    "           ex: hello -> bsdfsfd\" \n",
+    "           I like to write program\"\"\"\n",
+    "reponse: ...\n",
+    "\n",
+    "few-shot prompt\n",
+    "----------------\n",
+    "Text:\" i like this product\" ->positive\n",
+    "text: \" i not like this product\" ->negative\n",
+    "text: \" it's ok\" ->neutral\n",
+    "\n",
+    "Text: \"The product is good\" -> \n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "8ab99b08-1830-4d6b-9f3f-160a2aa0b184",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='you are helpful assistant', additional_kwargs={}, response_metadata={}),\n",
+       " HumanMessage(content='I likes to read ruby books', additional_kwargs={}, response_metadata={})]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Continue from ChatPromptTemplate\n",
+    "##\n",
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        ('system','you are helpful assistant'),\n",
+    "        ('human','I likes to read {mybook} books')\n",
+    "    ]\n",
+    ")\n",
+    "prompt.format_messages(mybook=\"ruby\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "bee61b11-993a-4ad9-a01d-aebf7be7efd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HumanMessage(content='What is Langchain?', additional_kwargs={}, response_metadata={})"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.messages import HumanMessage\n",
+    "HumanMessage(content=\"What is Langchain?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1f19d1fa-9518-4c50-9822-09be66050406",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Langchain is an AI technology company that focuses on developing a conversational AI platform that allows users to have more human-like conversations with AI models. The company uses a combination of natural language processing (NLP), machine learning, and knowledge retrieval to create a platform that can understand complex queries and provide relevant and accurate responses.\\n\\nLangchain\\'s platform is designed to be highly flexible and scalable, allowing it to handle a wide range of tasks and applications, from customer service and support to content generation and research. The company\\'s technology is based on a concept called \"conversational knowledge retrieval,\" which involves using a large dataset of text to train AI models to retrieve and integrate relevant information from multiple sources.\\n\\nSome of the key features of Langchain\\'s platform include:\\n\\n1. **Conversational interface**: Langchain\\'s platform provides a conversational interface that allows users to interact with AI models in a natural and intuitive way.\\n2. **Knowledge retrieval**: The platform uses a large dataset of text to train AI models to retrieve and integrate relevant information from multiple sources.\\n3. **Integration with other tools**: Langchain\\'s platform can be integrated with other tools and systems, such as CRM systems and customer service platforms.\\n4. **Scalability**: The platform is designed to be highly scalable, allowing it to handle a large volume of conversations and interactions.\\n\\nLangchain has gained significant attention in the AI and tech industries due to its innovative approach to conversational AI and its potential applications in various fields, such as customer service, marketing, and research.\\n\\nIn 2023, Langchain announced a new product called LLaMA (Large Language Model Application) which is a large language model developed by Meta AI. It is a multimodal large language model that can process and generate human-like text, images, and other forms of media.\\n\\nHowever, there is another company called LangChain Labs which is a part of the broader LangChain ecosystem. LangChain Labs is focused on developing and providing open-source tools and infrastructure for building and deploying conversational AI models. Their primary product is called the LangChain Core, which is a modular and extensible architecture for building conversational AI applications.', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 435, 'prompt_tokens': 40, 'total_tokens': 475, 'completion_time': 0.706510775, 'prompt_time': 0.002428864, 'queue_time': 0.063073107, 'total_time': 0.708939639}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_ff2b098aaf', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--0bf92cd6-f910-4c39-a0d5-600b61d151e5-0', usage_metadata={'input_tokens': 40, 'output_tokens': 435, 'total_tokens': 475})"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# llm_obj.invoke(\"What is langchain?\") \n",
+    "llm_obj.invoke([HumanMessage(content=\"What is Langchain?\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c9246963-a8e5-4163-9f29-5b35d3036beb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Hello Karthik, nice to meet you. As an instructor, what subject or field do you teach? And what do you need assistance with today?', additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 32, 'prompt_tokens': 45, 'total_tokens': 77, 'completion_time': 0.053060352, 'prompt_time': 0.002185185, 'queue_time': 0.058014864, 'total_time': 0.055245537}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_f757f4b0bf', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--3765094f-3138-41ac-8c31-748ed312d67b-0', usage_metadata={'input_tokens': 45, 'output_tokens': 32, 'total_tokens': 77})"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm_obj.invoke([HumanMessage(content=\"Hello my name is Karthik I am instructor\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "5055da93-e143-4ccc-8672-9678a872bd07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"I don't have information about your name. I'm a large language model, I don't have personal connections or access to personal data. Each time you interact with me, it's a new conversation, and I don't retain any information from previous conversations. If you'd like to share your name with me, I'd be happy to chat with you!\", additional_kwargs={}, response_metadata={'token_usage': {'completion_tokens': 73, 'prompt_tokens': 41, 'total_tokens': 114, 'completion_time': 0.083559212, 'prompt_time': 0.002989094, 'queue_time': 0.057192535, 'total_time': 0.086548306}, 'model_name': 'llama-3.1-8b-instant', 'system_fingerprint': 'fp_ff2b098aaf', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None}, id='run--61628873-1dcf-4ab8-9dd0-9007fc9c1b32-0', usage_metadata={'input_tokens': 41, 'output_tokens': 73, 'total_tokens': 114})"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm_obj.invoke([HumanMessage(content=\"Hi Tell me my name?\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e5a9876-3d3c-4708-ad82-620abebb5fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "User_Q: what is python?\n",
+    "AI_R:   ............\n",
+    "User_Q: list out any 5 important features\n",
+    "|\n",
+    "AI_R: there are 5 important python features\n",
+    "|\n",
+    "\n",
+    "-----------\n",
+    "User: Hello my name is Tom ...\n",
+    "AI: Hello Tom ... my name is userA ....\n",
+    "user: renewal my website domain\n",
+    "AI: ... type your doamin\n",
+    "User: \n",
+    " ---------------------------------------//Session expired \n",
+    "\n",
+    "user: I will type website name?\n",
+    "AI : May i know your name...\n",
+    " -----------------------------------------//new session\n",
+    "\n",
+    "  +--------------------------------------------+\n",
+    "  | SessionID     |    Chat(Human+AI)          |\n",
+    "  |---------------|----------------------------|\n",
+    "  |  Session1     | User: ....\n",
+    "  |               | AI_R:\n",
+    "  |               | User:\n",
+    "  |               | AI_R:\n",
+    "  |               | ..\n",
+    "  |---------------|-----------------------------\n",
+    "  |  session2     | User: Hello my name is Tom\n",
+    "  |               | AI : Hello Tom ..\n",
+    "  |               | ...\n",
+    "  |               | User: \"Hi Tell me my name?\"\n",
+    "  |               | AI : Hello Tom ..\n",
+    " +--------------------------------------------+"
+   ]
   }
  ],
  "metadata": {
