--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -1981,10 +1981,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f552d27-d3da-4c3c-be51-a78472bd1ba1",
+   "id": "d0c0808c-b373-486e-ae90-aa4b769a88fd",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f552d27-d3da-4c3c-be51-a78472bd1ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Recap - PromptTemplate"
+   ]
   },
   {
    "cell_type": "code",
@@ -2118,6 +2128,250 @@
     "English: \"I am learning genAI\"\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "253c9438-2f91-4586-b053-11520cb55ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8493fc6-cc73-4125-9552-c5a010b11b5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strict RAG ===> Answer from loaded document only -- Avoid hullucination \n",
+    "                     -----------------------\n",
+    "                        {context} \n",
+    "\n",
+    "context - retrived_chunks \n",
+    "--------\n",
+    "\n",
+    "prompt = f'''\n",
+    "Answer the question based only on the following  context:\n",
+    "context: {context}\n",
+    "'''\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables = [],\n",
+    "    template=template_obj\n",
+    ")\n",
+    "\n",
+    "prompt.format() ->formatted_prompt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "34f71c77-8652-42b1-a1a2-651b76c8b62e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.document_loaders import TextLoader\n",
+    "from langchain_text_splitters import CharacterTextSplitter\n",
+    "from langchain_community.vectorstores import FAISS\n",
+    "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain_groq import ChatGroq\n",
+    "from langchain.chains import RetrievalQA # Higher version of langchain -> from langchain_classic.chains import RetrievalQA\n",
+    "from langchain.prompts import PromptTemplate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "b6d9e7e7-ffb6-4676-a93f-5dabf4b9a1f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 467, which is longer than the specified 200\n",
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step 1 Load the data\n",
+    "loader = TextLoader('my_docs.txt')\n",
+    "documents = loader.load()\n",
+    "\n",
+    "# step 2 split - chunks\n",
+    "text_splitter = CharacterTextSplitter(chunk_size=200,chunk_overlap=20)\n",
+    "docs = text_splitter.split_documents(documents)\n",
+    "\n",
+    "# step 3 embedding object\n",
+    "embeddings = HuggingFaceEmbeddings(model=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# step 4 stores to vectordb\n",
+    "vectorstore  = FAISS.from_documents(docs,embeddings)\n",
+    "\n",
+    "# step 5 create retrievalobject\n",
+    "retriever_obj = vectorstore.as_retriever()\n",
+    "\n",
+    "# step 6 create llm object\n",
+    "llm_obj = ChatGroq(model=\"llama-3.1-8b-instant\",api_key=os.getenv(\"GROQ_API_KEY\"))\n",
+    "\n",
+    "# step 7 prompt - Strict prompt - Strict RAG\n",
+    "my_prompt = PromptTemplate(\n",
+    "    input_variables=[\"context\",\"question\"],\n",
+    "    template=\"\"\"\n",
+    "    You are a strict retrieval QA assistant.\n",
+    "    Answer only using the information given in the context below.\n",
+    "    if the answer is not present in the context, reply exactly with:\n",
+    "    \"I don't know, the document doesnot contain this information.\"\n",
+    "    Context:\n",
+    "    {context}\n",
+    "    Question:\n",
+    "    {question}\n",
+    "    Answer:\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "# step 8: QAChain\n",
+    "rag_chain = RetrievalQA.from_chain_type(llm = llm_obj,retriever=retriever_obj,chain_type_kwargs={\"prompt\":my_prompt})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "b3e2571e-d3e9-4d6c-94ee-be8a152d801a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'what is lanchain?',\n",
+       " 'result': 'LangChain is a framework for developing applications powered by large language models (LLMs).'}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain(\"what is langchain?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "20129c77-f7f1-4d92-9d4a-c81bbacc5d51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'How to write Hello world example in C?',\n",
+       " 'result': \"I don't know, the document does not contain this information.\"}"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain(\"How to write Hello world example in C?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "662aeaef-a256-46a7-ab79-25c253b4cddd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'what is langchain?',\n",
+       " 'result': 'LangChain is a framework for developing applications powered by large language models (LLMs).'}"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain(\"what is langchain?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54fdadc7-e7f5-43c8-a1a3-7011e61c1b1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "df794cfb-82c6-45c5-a9b1-2491debfbb7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'what is factorial?',\n",
+       " 'result': \"I don't know, the document does not contain this information.\"}"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain(\"what is factorial?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae3a1b0-e2e1-48d6-9242-2195aff1d1ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
