--- a/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
+++ b/DAY3/OU_GenAI_LLM_Jan26_3.ipynb
@@ -2372,6 +2372,158 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e021b378-bc8b-4913-90b2-954bce525b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "908b4076-c2bb-4930-a9ba-9ae7743452cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Created a chunk of size 467, which is longer than the specified 200\n",
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step 1 Load the data\n",
+    "loader = TextLoader('my_docs.txt')\n",
+    "documents = loader.load()\n",
+    "\n",
+    "# step 2 split - chunks\n",
+    "text_splitter = CharacterTextSplitter(chunk_size=200,chunk_overlap=20)\n",
+    "docs = text_splitter.split_documents(documents)\n",
+    "\n",
+    "# step 3 embedding object\n",
+    "embeddings = HuggingFaceEmbeddings(model=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# step 4 stores to vectordb\n",
+    "vectorstore  = FAISS.from_documents(docs,embeddings)\n",
+    "\n",
+    "# step 5 create retrievalobject\n",
+    "retriever_obj = vectorstore.as_retriever()\n",
+    "\n",
+    "# step 6 create llm object\n",
+    "llm_obj = ChatGroq(model=\"llama-3.1-8b-instant\",api_key=os.getenv(\"GROQ_API_KEY\"))\n",
+    "\n",
+    "# step 7 prompt - Hybrid RAG\n",
+    "my_prompt = PromptTemplate(\n",
+    "    input_variables=[\"context\",\"question\"],\n",
+    "    template=\"\"\"\n",
+    "    Use the following context to answer the question.\n",
+    "    if the answer is not present in the context, answer from your general knowledge.\n",
+    "    Context:\n",
+    "    {context}\n",
+    "    Question:\n",
+    "    {question}\n",
+    "    Answer:\n",
+    "    \"\"\"\n",
+    ")\n",
+    "\n",
+    "# step 8: QAChain\n",
+    "rag_chain = RetrievalQA.from_chain_type(llm = llm_obj,retriever=retriever_obj,chain_type_kwargs={\"prompt\":my_prompt})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "a4f27a9f-e113-4d84-b539-b91187ad4890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'query': 'what is factorial?',\n",
+       " 'result': 'The answer is not present in the context, so I will answer from my general knowledge.\\n\\nThe factorial of a non-negative integer n, denoted by n!, is the product of all positive integers less than or equal to n. In other words, it is the result of multiplying all whole numbers from n down to 1.\\n\\nFor example, the factorial of 5 (5!) is 5 × 4 × 3 × 2 × 1 = 120, which is mentioned in the given context.\\n\\nSo, in general, the factorial of a number n is calculated as:\\n\\nn! = n × (n-1) × (n-2) × ... × 2 × 1'}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rag_chain(\"what is factorial?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "5a2cb241-15ba-432d-9e7a-fc9c2e43ab1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\karth\\AppData\\Roaming\\Python\\Python313\\site-packages\\torch\\nn\\modules\\module.py:1762: FutureWarning: `encoder_attention_mask` is deprecated and will be removed in version 4.55.0 for `BertSdpaSelfAttention.forward`.\n",
+      "  return forward_call(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In general knowledge, the factorial of a non-negative integer n, denoted by n!, is the product of all positive integers less than or equal to n. It is calculated as:\n",
+      "\n",
+      "n! = n × (n-1) × (n-2) × ... × 2 × 1\n",
+      "\n",
+      "For example, the factorial of 5 (5!) is 120, as mentioned in the given context.\n",
+      "\n",
+      "So, the answer is: Factorial is the product of all positive integers less than or equal to a given number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rag_chain(\"what is factorial?\")['result'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5201653c-62ce-4852-a3db-fb9cc90c6d69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd75333a-cc2e-4ac2-8ae4-1a2c2ebe7365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## RAG with ChatHistory \n",
+    "|\n",
+    "# Step 1: load pdf file\n",
+    "# Step 2: split -chunk \n",
+    "# Step 3: Embedding\n",
+    "# Step 4: VectorStores\n",
+    "# Step 5: LLMobject\n",
+    "# Step 6: Prompt with history\n",
+    "# Step 7: QAChain\n",
+    "# Step 8: Query -- Question+ChartConfigurable "
+   ]
   }
  ],
  "metadata": {
